# KosL

./: .gitconfig_encoding_fix.md  .gitignore  CMakeLists.txt  CODE_MIGRATION_STATUS.md  COMPILE_STATUS.md  DUAL_AXIS_IMPLEMENTATION_STATUS.md  DUAL_AXIS_SUPPORT_ANALYSIS.md  FINANCE_DOMAIN_SUMMARY.md  Future.md  IMPLEMENTATION_STATUS.md  IMPLEMENTATION_SUMMARY.md  KOS_TL_COMPILER_ARCHITECTURE.md  KOS_TL_IMPLEMENTATION_ROADMAP.md  KOS_TL_LANGUAGE_DESIGN.md  KOS_TL_PROJECT_SUMMARY.md  KOS_TL_VSCODE_EXTENSION_PLAN.md  KOS_UNIVERSE_LEQ_USAGE.md  MANUFACTURING_MIGRATION_GUIDE.md  New_Design_Plan.md  ONTOLOGY_MEMORY_REPRESENTATION.md  ONTOLOGY_STORAGE_STRUCTURE.md  README.md  TYPE_CHECKING_SYSTEM.md  TYPE_CONSTRUCTION_API.md  TYPE_CONSTRUCTION_EXAMPLES.md  TYPE_SYSTEM_REFACTORING_PLAN.md  VISUALIZATION_FEATURE_SUMMARY.md  VISUALIZATION_GUIDE.md  main.c  push_to_github.md
coc/: Cargo.toml  coc-implementation.md
compiler/: CMakeLists.txt  COMPILER_STATUS.md  README.md  test2_stderr.txt  test_stderr.txt  test_stdout.txt
compiler/docs/: CIC_CORE.md
compiler/examples/: cic_example.c  example.c  example.kos  example_new.c  simple.c  simple.kos  simple_test.c  test_simple.c  test_simple.kos
compiler/include/compiler/: cic_core.h  codegen.h  lexer.h  parser.h  type_checker.h
compiler/src/: main.c
compiler/src/compiler/: cic_core.c  codegen.c  lexer.c  parser.c  type_checker.c
compiler/tests/: test_lexer.c  test_parser.c  test_type_checker.c
docs/: API_LAYER_PHASE5_SUMMARY.md  CAUSAL_TRACEABILITY.md  CORE_API.md  CORE_INDEPENDENCE_RECOMMENDATION.md  CORE_LAYER_KOS_CORE_REFACTORING.md  CORE_RUNTIME_RIGOROUS_ANALYSIS.md  CREATE_REPO_STEPS.md  FIX_GITHUB_ACCOUNT_404.md  GITHUB_2FA_QUICK_START.md  GITHUB_2FA_SETUP.md  GITHUB_ACCOUNT_STATUS_CHECK.md  GITHUB_API_404_EXPLANATION.md  GITHUB_PAT_QUICK_GUIDE.md  GITHUB_REPO_404_TROUBLESHOOTING.md  GITHUB_SYNC_SETUP.md  ILLEGAL_TYPE_AND_SIGNAL_EVENT_IMPLEMENTATION.md  KERNEL_API.md  KERNEL_API_QUICK_REFERENCE.md  KERNEL_IMPLEMENTATION_SUMMARY.md  KERNEL_LAYER_SUMMARY.md  KERNEL_SCENARIOS_DESIGN.md  KOS_ADVANTAGES.md  KOS_CORE_HASKELL.md  KOS_CORE_INTEGRATION.md  KOS_CORE_KOS_TEX_COMPARISON.md  KOS_CORE_TYPE_INFERENCE.md  KOS_SYNTAX.md  KOS_TL_APPLICATION_VALUE_ANALYSIS.md  KOS_WEB_KOS_TL_REVIEW.md  LAYER_API_REFERENCE.md  LAYER_INTERFACES.md  MTK_KERNEL_RUNTIME_ALIGNMENT.md  MULTI_ONTOLOGY_STORAGE_REASONING_VIZ.md  PALANTIR_ALIGNMENT_ROADMAP.md  PERFORMANCE_OPTIMIZATION_PHASE7_SUMMARY.md  PHASE2_ENHANCEMENT_SUMMARY.md  PHASE3_PHASE4_ENHANCEMENT_SUMMARY.md  QUALITY_TRACEABILITY_DEMO.md  QUERY_ENGINE_PHASE1_SUMMARY.md  README_CN.md  (+7 more)
examples/: all_scenarios_demo.c  api_demo.c  app_layer_core_rules_demo.c  core_pi_example.c  core_rules_demo.c  core_sigma_example.c  counterfactual_demo.c  data_integration_demo.c  distributed_cache_demo.c  finance_demo.c  kernel_example.c  kos_core_bridge_demo.c  kos_tl_end_to_end_demo.c  manufacturing_demo.c  manufacturing_kb_root_cause_demo.c  mes_integration_demo.c  ontology_version_demo.c  performance_demo.c  quality_traceability_demo.c  query_example.c  security_demo.c  signal_process_demo.c  stream_demo.c  test_storage.c  unqualified_product_demo.c  value_predicate_demo.c  visualization_demo.c
include/: kos_api.h  kos_causal_trace.h  kos_core.h  kos_core_bridge.h  kos_data_integration.h  kos_distributed_cache.h  kos_event_op.h  kos_finance.h  kos_kernel.h  kos_kernel_context.h  kos_kernel_scenarios.h  kos_kernel_session.h  kos_knowledge_base.h  kos_manufacturing.h  kos_ontology.h  kos_ontology_new.h  kos_ontology_registry.h  kos_ontology_version.h  kos_performance.h  kos_query.h  kos_reasoning.h  kos_runtime.h  kos_security.h  kos_signal_simulate.h  kos_signal_source.h  kos_stream.h  kos_trace.h  kos_visualization.h  kos_visualization_enhanced.h
kos-core/: README.md  kos-core.cabal
kos-core/.stack-work/install/f4df2292/lib/x86_64-windows-ghc-9.6.3/kos-core-0.1.0.0-LnsTi2Dv2f6BMgSyH2cF0y/: KosCore.hi
kos-core/.stack-work/install/f4df2292/lib/x86_64-windows-ghc-9.6.3/kos-core-0.1.0.0-LnsTi2Dv2f6BMgSyH2cF0y/KosCore/: AST.hi  Alpha.hi  Context.hi  JSON.hi  Parser.hi  Proof.hi  Reduction.hi  Substitution.hi  TypeCheck.hi  Universe.hi
kos-core/.stack-work/install/f4df2292/pkgdb/: kos-core-0.1.0.0-LnsTi2Dv2f6BMgSyH2cF0y.conf  package.cache
kos-core/app/: Main.hs
kos-core/dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  solver-plan  source-hashes  up-to-date
kos-core/dist-newstyle/packagedb/ghc-9.8.2/: kos-core-0.1.0.0-inplace.conf  package.cache
kos-core/docs/: IMPROVEMENTS_METATHEORY_PI_PAIR_AUTO_ID.md  KOS_PDF_TYPE_CAPABILITY_REVIEW.md  KOS_SYNTAX_AND_PARSER_REVIEW.md  PROOF_REVIEW_KNOWLEDGE_OPS.md  PROOF_SEARCH_TRACE.md  PROOF_TOOLS_COMPARISON.md
kos-core/examples/: 01_universe.kos  02_prop_base.kos  03_pi_lam.kos  04_sigma_pair.kos  05_sum_case.kos  06_id_refl.kos  07_let.kos  08_full.kos  09_type_inference_reduction.kos  README.md  core_features.kos  fail_evt.kos  quality_traceability.kos  quality_traceability_prove.kos  quality_traceability_unconstructable.kos  simple.kos  value_pred.kos
kos-core/src/: KosCore.hs
kos-core/src/KosCore/: AST.hs  Alpha.hs  Context.hs  JSON.hs  Parser.hs  Proof.hs  Reduction.hs  Substitution.hs  TypeCheck.hs  Universe.hs
kos-core/test/: Spec.hs
kos-tl-ide/: .gitignore  .npmrc  ARCHITECTURE.md  BUILD.md  IDE_FEATURES.md  PACKAGING.md  PROJECT_STATUS.md  QUICK_START.md  README.md  README_BUILD.md  README_BUILD_COMPLETE.md  README_MENU.md  build.bat  build.sh  package.json  功能修复说明.md  快速启动.md  打包完成说明.md  打包成功.md  打包成功说明.md  打包说明.md  文件打开修复说明.md  文件打开问题修复说明.md  构建完成.md  构建完成总结.md  构建完成说明.md  构建总结.md  构建成功.md  编辑器显示修复说明.md  菜单功能说明.md  菜单实现完成.md  重新构建说明.md
kos-web/: README.md  README_EN.md  docker-compose.yml
monograph/: Coc.tex  KOS-TL-Book.aux  KOS-TL-Book.bib  KOS-TL-Book.blg  KOS-TL-Book.tex  KOS-TL-Book.toc  KOS-TL-Bookv0.1.tex  KOS-TL-KG-Comparison.md  KOS-TLv1-core-chapter.tex  KOS-TLv1.tex  Kos.tex  README.md  arxiv.sty  build.bat  chapter-literature-review-body.tex  chapter-literature-review.tex  kos-tl-knowledge-graph.html
(+175 files in other folders)
