cabal-version:      3.0
name:               kos-core
version:            0.1.0.0
synopsis:           KOS Core - Formal type-theoretic kernel for KOS-TL
description:        Independent Core layer implementing intuitionistic dependent
                    type theory with dual-axis universe system (U_i, Type_i).
                    Parser as sole gatekeeper ensures only well-formed terms exist.
license:            MIT
author:             KOS-TL Project
maintainer:         kos@example.com
build-type:         Simple

library
  exposed-modules:
    KosCore
    KosCore.AST
    KosCore.Universe
    KosCore.Context
    KosCore.Substitution
    KosCore.Alpha
    KosCore.Reduction
    KosCore.TypeCheck
    KosCore.Parser
    KosCore.Proof
    KosCore.JSON
  hs-source-dirs:   src
  build-depends:
    base       >= 4.16 && < 5,
    containers >= 0.6,
    parsec     >= 3.1,
    text       >= 1.2
  default-language: Haskell2010

executable kos-core
  main-is:          Main.hs
  hs-source-dirs:   app
  build-depends:
    base     >= 4.16 && < 5,
    kos-core,
    text     >= 1.2
  default-language: Haskell2010

test-suite kos-core-tests
  type:             exitcode-stdio-1.0
  main-is:          Spec.hs
  hs-source-dirs:   test
  build-depends:
    base     >= 4.16 && < 5,
    kos-core,
    text     >= 1.2
  default-language: Haskell2010
